--- a/Chiaro.ui
+++ b/Chiaro.ui
@@ -133,7 +133,7 @@
                 <number>0</number>
                </property>
                <property name="tracking">
-                <bool>false</bool>
+                <bool>true</bool>
                </property>
                <property name="orientation">
                 <enum>Qt::Horizontal</enum>
@@ -277,6 +277,9 @@
                <property name="text">
                 <string>&gt;&gt;&gt;</string>
                </property>
+               <property name="shortcut">
+                <string>Ctrl+G</string>
+               </property>
               </widget>
              </item>
              <item>
@@ -297,6 +300,9 @@
                <property name="text">
                 <string>Load</string>
                </property>
+               <property name="shortcut">
+                <string>Ctrl+L</string>
+               </property>
               </widget>
              </item>
              <item>
@@ -309,6 +315,9 @@
                </property>
                <property name="text">
                 <string>Select Root Folder</string>
+               </property>
+               <property name="shortcut">
+                <string>Ctrl+S</string>
                </property>
               </widget>
              </item>
@@ -402,7 +411,7 @@
              <number>1</number>
             </property>
             <property name="tracking">
-             <bool>false</bool>
+             <bool>true</bool>
             </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -420,6 +429,9 @@
                <property name="text">
                 <string>Save</string>
                </property>
+               <property name="shortcut">
+                <string>Ctrl+S</string>
+               </property>
               </widget>
              </item>
              <item>
@@ -432,6 +444,9 @@
                </property>
                <property name="text">
                 <string>&gt;&gt;&gt;</string>
+               </property>
+               <property name="shortcut">
+                <string>Ctrl+G</string>
                </property>
               </widget>
              </item>
@@ -485,12 +500,28 @@
               <property name="text">
                <string>Delete</string>
               </property>
+              <property name="shortcut">
+               <string>Del</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="b2_deleteAllInvalid">
+              <property name="text">
+               <string>Delete All Invalid</string>
+              </property>
+              <property name="shortcut">
+               <string>Ctrl+Del</string>
+              </property>
              </widget>
             </item>
             <item>
              <widget class="QPushButton" name="b2_doFilter">
               <property name="text">
                <string>Filter</string>
+              </property>
+              <property name="shortcut">
+               <string>Ctrl+F</string>
               </property>
              </widget>
             </item>
@@ -520,6 +551,9 @@
               <widget class="QPushButton" name="b2_doContactPoint">
                <property name="text">
                 <string>Execute</string>
+               </property>
+               <property name="shortcut">
+                <string>Ctrl+C</string>
                </property>
               </widget>
              </item>
@@ -611,6 +645,9 @@
               <widget class="QPushButton" name="b4_doElas">
                <property name="text">
                 <string>Elastography</string>
+               </property>
+               <property name="shortcut">
+                <string>Ctrl+E</string>
                </property>
               </widget>
              </item>
@@ -756,6 +793,9 @@
                <property name="text">
                 <string>Fit</string>
                </property>
+               <property name="shortcut">
+                <string>Ctrl+F</string>
+               </property>
               </widget>
              </item>
              <item row="0" column="2">
@@ -861,6 +901,9 @@
                <property name="text">
                 <string>Export Single</string>
                </property>
+               <property name="shortcut">
+                <string>Ctrl+E, Ctrl+S</string>
+               </property>
               </widget>
              </item>
              <item>
@@ -868,12 +911,18 @@
                <property name="text">
                 <string>Save</string>
                </property>
+               <property name="shortcut">
+                <string>Ctrl+S</string>
+               </property>
               </widget>
              </item>
              <item>
               <widget class="QPushButton" name="b3_doExport2">
                <property name="text">
                 <string>Export Bilayer</string>
+               </property>
+               <property name="shortcut">
+                <string>Ctrl+E, Ctrl+B</string>
                </property>
               </widget>
              </item>
