--- a/Chiaro.ui
+++ b/Chiaro.ui
@@ -591,7 +591,7 @@
                </item>
                <item>
                 <property name="text">
-                 <string>Savitzky</string>
+                 <string>SmoothFFT</string>
                 </property>
                </item>
               </widget>
