--- a/nano.ui
+++ b/nano.ui
@@ -26,7 +26,7 @@
         <property name="title">
          <string>Curve</string>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="0,0">
+        <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="0,0,0,0,0">
          <item>
           <widget class="QLabel" name="label">
            <property name="sizePolicy">
@@ -47,6 +47,36 @@
            </property>
            <property name="value">
             <number>1</number>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="crop">
+           <property name="text">
+            <string>crop 50nm</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="crop_left">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="text">
+            <string>L</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="crop_right">
+           <property name="text">
+            <string>R</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
