--- a/nano.ui
+++ b/nano.ui
@@ -579,6 +579,13 @@
          <enum>QLayout::SetMinimumSize</enum>
         </property>
         <item>
+         <widget class="QPushButton" name="quickView">
+          <property name="text">
+           <string>Inspect</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QComboBox" name="comboCP"/>
         </item>
         <item>
