--- a/nano.ui
+++ b/nano.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1241</width>
+    <width>1615</width>
     <height>765</height>
    </rect>
   </property>
@@ -26,6 +26,9 @@
       </property>
       <item>
        <widget class="QGroupBox" name="Curve">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
           <horstretch>0</horstretch>
