--- a/nano.ui
+++ b/nano.ui
@@ -27,7 +27,7 @@
       <item>
        <widget class="QGroupBox" name="Curve">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -42,7 +42,7 @@
          <item>
           <widget class="QLabel" name="label">
            <property name="enabled">
-            <bool>false</bool>
+            <bool>true</bool>
            </property>
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
