easy csv file format added
easy csv file format was added in order to read synthetic test data for software validation

--- a/nano.ui
+++ b/nano.ui
@@ -374,6 +374,13 @@
           </widget>
          </item>
          <item>
+          <widget class="QRadioButton" name="open_easy_tsv">
+           <property name="text">
+            <string>Easy tsv</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QPushButton" name="open_selectfolder">
            <property name="font">
             <font>
